[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Label" type="Label" parent="."]
margin_left = -46.0
margin_top = -128.0
margin_right = 50.0
margin_bottom = -104.0
text = "YOU ARE DEAD"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -504.0
margin_top = 208.0
margin_right = -258.0
margin_bottom = 290.0
text = "you move with wasd
attack with left click
shoot with right click(work in progress)
consume health potion with q
dodge with space"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = -168.0
margin_top = 240.0
margin_right = -88.0
margin_bottom = 288.0
text = "dragon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 112.0
margin_top = 248.0
margin_right = 203.0
margin_bottom = 280.0
text = "procgenmap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = -48.0
margin_top = 240.0
margin_right = 56.0
margin_bottom = 276.0
text = "lizard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = -160.0
margin_top = -72.0
margin_right = -45.0
margin_bottom = -8.00001
rect_scale = Vector2( 3, 3 )
custom_colors/font_color_disabled = Color( 0.941176, 0.0901961, 0.0901961, 1 )
custom_colors/font_color = Color( 1, 0.972549, 0.972549, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.784314, 0.133333, 1 )
custom_colors/font_color_pressed = Color( 0.819608, 0.133333, 0.133333, 1 )
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Button2" to="." method="_on_Button2_button_up"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
